--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.2.4",
     "formidable": "^3.2.5",
     "huggingface": "^1.4.0",
     "i18next": "^22.4.14",
